Fix env var syntax.

--- a/minecraft_aks_pod.yml
+++ b/minecraft_aks_pod.yml
@@ -9,6 +9,9 @@ spec:
   containers:
   - name: minecraftserver
     image: openhack/minecraft-server:1.0
+    env:
+      - name: "EULA"
+        value: "TRUE"
     ports:
     - containerPort: 25565
       protocol: TCP
