--- a/api/api.csproj
+++ b/api/api.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Kubernetes.DotNet" Version="1.0.1" />
+    <PackageReference Include="KubernetesClient" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
